# youbot_dynamics

./: CMakeLists.txt  package.xml
config/: params.yaml
src/: youbot_rne_solver_test.cpp  youbot_solver_test copy.cpp  youbot_solver_test.cpp
urdf/: youbot_model.urdf
