<?xml version="1.0"?>
<package format="2">
  <name>youbot_dynamics</name>
  <version>0.0.0</version>
  <description>Package to run dynamics solvers on youbot.</description>

  <maintainer email="vamsikalagaturu@gmail.com">Vamsi Kalagaturu</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>youbot_driver</build_depend>
  <build_export_depend>orocos_kdl</build_export_depend>
  <build_export_depend>youbot_driver</build_export_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>youbot_driver</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
